<resources>
    <string name="app_name">AirQuality</string>
    <string name="zero_hint">0</string>
    <string name="temperature">Temperature:</string>
    <string name="air_quality">Air Quality:</string>
    <string name="dust">Dust:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="celsius_unit">℃</string>
    <string name="fahrenheit_unit">℉</string>
    <string name="dust_unit">μg/m³</string>
    <string name="dust_circle">Dust circle</string>
    <string name="updateText">Update time:&#160;</string>
    <string name="string_pollution_low">good</string>
    <string name="string_pollution_high">bad</string>
    <string name="content_desc_settings">settings</string>
    <string name="content_desc_conn_type">connection type</string>
    <string name="desc_pollution_open_circle">pollution open circle</string>
    <string name="desc_pollution_small_circle">pollution small circle</string>
    <string name="pm25">PM 2,5:</string>
    <string name="pm10">PM 10:</string>
    <string name="battery_status">battery status</string>
    <string name="sample_100">100%</string>
    <string name="network_hint">Choose network</string>
    <string name="network_name">Network name:</string>
    <string name="ssid">SSID:</string>
    <string name="password">Password:</string>
    <string name="hint_network_name">Network name</string>
    <string name="hint_password">Password</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="title_set_network">Set network</string>


    <string-array name="time_intervals">
        <item>30 sec</item>
        <item>1 min</item>
        <item>3 min</item>
        <item>5 min</item>
        <item>10 min</item>
        <item>15 min</item>
        <item>30 min</item>
        <item>60 min</item>
    </string-array>
</resources>
